--- a/package.json
+++ b/package.json
@@ -14,8 +14,10 @@
   },
   "main": "background.js",
   "dependencies": {
+    "@mdi/font": "^5.0.45",
     "apexcharts": "^3.8.6",
     "axios": "^0.19.0",
+    "core-js": "^3.6.4",
     "electron-is-dev": "^1.1.0",
     "jquery": "^3.4.1",
     "jquery-ui": "^1.12.1",
@@ -33,12 +35,11 @@
     "shelljs": "^0.8.3",
     "sqlite3": "^4.1.1",
     "tedious": "^8.0.1",
+    "vue": "^2.6.11",
     "vue-apexcharts": "^1.5.0",
     "vue-router": "^3.0.3",
     "vuetify": "^2.0.0",
-    "vuex": "^3.0.1",
-    "core-js": "^3.6.4",
-    "vue": "^2.6.11"
+    "vuex": "^3.0.1"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~4.2.0",
