--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "main": "background.js",
   "dependencies": {
     "@mdi/font": "^5.0.45",
+    "@mdi/js": "^5.3.45",
     "apexcharts": "^3.8.6",
     "axios": "^0.19.0",
     "core-js": "^3.6.4",
