--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "untitled",
+  "name": "teapo",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -14,51 +14,51 @@
   },
   "main": "background.js",
   "dependencies": {
-    "@mdi/font": "^5.0.45",
-    "@mdi/js": "^5.3.45",
-    "apexcharts": "^3.19.2",
+    "@mdi/font": "^5.8.55",
+    "@mdi/js": "^5.8.55",
+    "apexcharts": "^3.22.2",
     "axios": "^0.19.0",
-    "core-js": "^3.6.4",
-    "electron-is-dev": "^1.1.0",
-    "jquery": "^3.4.1",
+    "core-js": "^3.7.0",
+    "electron-is-dev": "^1.2.0",
+    "jquery": "^3.5.1",
     "jquery-ui": "^1.12.1",
-    "knex": "^0.20.8",
+    "knex": "^0.20.15",
     "lamejs": "^1.2.0",
     "material-design-icons-iconfont": "^5.0.1",
-    "mssql": "^6.0.1",
+    "mssql": "^6.2.3",
     "mysql": "^2.18.0",
-    "mysql2": "^2.1.0",
+    "mysql2": "^2.2.5",
     "oracle": "^0.4.1",
     "oracledb": "^4.2.0",
     "pg": "^7.17.1",
     "pg-native": "^3.0.0",
-    "pg-query-stream": "^3.0.0",
-    "shelljs": "^0.8.3",
-    "sqlite3": "^4.1.1",
-    "tedious": "^8.0.1",
-    "vue": "^2.6.11",
-    "vue-apexcharts": "^1.5.0",
-    "vue-router": "^3.0.3",
-    "vuetify": "^2.0.0",
-    "vuex": "^3.0.1"
+    "pg-query-stream": "^3.4.2",
+    "shelljs": "^0.8.4",
+    "sqlite3": "^4.2.0",
+    "tedious": "^8.3.1",
+    "vue": "^2.6.12",
+    "vue-apexcharts": "^1.6.0",
+    "vue-router": "^3.4.9",
+    "vuetify": "^2.3.17",
+    "vuex": "^3.5.1"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~4.2.0",
     "@vue/cli-plugin-eslint": "~4.2.0",
     "@vue/cli-service": "~4.2.0",
     "babel-eslint": "^10.0.3",
-    "electron": "^8.1.1",
+    "electron": "^8.5.3",
     "electron-packager": "^14.0.6",
-    "electron-rebuild": "^1.8.8",
+    "electron-rebuild": "^1.11.0",
     "eslint": "^6.7.2",
     "eslint-plugin-vue": "^6.1.2",
-    "sass": "^1.17.4",
-    "sass-loader": "^7.1.0",
+    "sass": "^1.29.0",
+    "sass-loader": "^10.1.0",
     "vue-cli-plugin-electron-builder": "^1.4.0",
     "vue-cli-plugin-vuetify": "^0.6.3",
-    "vue-devtools": "^5.1.3",
-    "vue-template-compiler": "^2.6.11",
-    "vuetify-loader": "^1.2.2"
+    "vue-devtools": "^5.1.4",
+    "vue-template-compiler": "^2.6.12",
+    "vuetify-loader": "^1.6.0"
   },
   "eslintConfig": {
     "root": true,
