--- a/dist_electron/package.json
+++ b/dist_electron/package.json
@@ -9,6 +9,7 @@
     "electron:build": "vue-cli-service electron:build",
     "electron:serve": "vue-cli-service electron:serve",
     "build:win": "vue-cli-service electron:build --windows",
+    "build:linux": "vue-cli-service electron:build --linux",
     "postinstall": "electron-builder install-app-deps",
     "postuninstall": "electron-builder install-app-deps"
   },
