--- a/dist_electron/package.json
+++ b/dist_electron/package.json
@@ -11,7 +11,8 @@
     "build:win": "vue-cli-service electron:build --windows",
     "build:linux": "vue-cli-service electron:build --linux",
     "postinstall": "electron-builder install-app-deps",
-    "postuninstall": "electron-builder install-app-deps"
+    "postuninstall": "electron-builder install-app-deps",
+    "electron:generate-icons": "electron-icon-builder --input=./public/icon.png --output=build --flatten"
   },
   "main": "background.js",
   "dependencies": {
@@ -21,6 +22,7 @@
     "axios": "^0.19.0",
     "core-js": "^3.7.0",
     "electron-is-dev": "^1.2.0",
+    "electron-updater": "^4.3.5",
     "jquery": "^3.5.1",
     "jquery-ui": "^1.12.1",
     "knex": "^0.20.15",
@@ -49,6 +51,7 @@
     "@vue/cli-service": "~4.2.0",
     "babel-eslint": "^10.0.3",
     "electron": "^8.5.3",
+    "electron-icon-builder": "^1.0.2",
     "electron-packager": "^14.0.6",
     "electron-rebuild": "^1.11.0",
     "eslint": "^6.7.2",
