--- a/package.json
+++ b/package.json
@@ -1,5 +1,11 @@
 {
   "name": "teapo",
+  "description": "Best Software for Acing The TOEFL YET!!",
+  "homepage": "www.teapo.ir",
+  "author": {
+    "name": "Mehdi Yazdani",
+    "email": "info@teapo.ir"
+  },
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -9,10 +15,11 @@
     "electron:build": "vue-cli-service electron:build",
     "electron:serve": "vue-cli-service electron:serve",
     "build:win": "vue-cli-service electron:build --windows",
-    "build:linux": "vue-cli-service electron:build --linux",
+    "build:linux": "vue-cli-service electron:build --linux deb",
+    "build:arch": "vue-cli-service electron:build --linux",
     "postinstall": "electron-builder install-app-deps",
-    "postuninstall": "electron-builder install-app-deps",
-    "electron:generate-icons": "electron-icon-builder --input=./public/icon.png --output=build --flatten"
+    "postuninstall": "electron- install-app-deps",
+    "electron:generate-icons": "elebuilderctron-icon-builder --input=./public/icon.png --output=build --flatten"
   },
   "main": "background.js",
   "dependencies": {
@@ -20,7 +27,7 @@
     "@mdi/js": "^5.8.55",
     "apexcharts": "^3.22.2",
     "axios": "^0.19.0",
-    "core-js": "^3.7.0",
+    "core-js": "^3.8.0",
     "electron-is-dev": "^1.2.0",
     "electron-updater": "^4.3.5",
     "jquery": "^3.5.1",
@@ -36,21 +43,23 @@
     "pg": "^7.17.1",
     "pg-native": "^3.0.0",
     "pg-query-stream": "^3.4.2",
+    "request": "^2.88.2",
     "shelljs": "^0.8.4",
     "sqlite3": "^4.2.0",
     "tedious": "^8.3.1",
     "vue": "^2.6.12",
     "vue-apexcharts": "^1.6.0",
     "vue-router": "^3.4.9",
-    "vuetify": "^2.3.17",
-    "vuex": "^3.5.1"
+    "vuetify": "^2.3.19",
+    "vuex": "^3.6.0"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~4.2.0",
     "@vue/cli-plugin-eslint": "~4.2.0",
     "@vue/cli-service": "~4.2.0",
     "babel-eslint": "^10.0.3",
-    "electron": "^8.5.3",
+    "electron": "^8.5.5",
+    "electron-builder-squirrel-windows": "^22.9.1",
     "electron-icon-builder": "^1.0.2",
     "electron-packager": "^14.0.6",
     "electron-rebuild": "^1.11.0",
